[2.x-typing-theta-00] refactored Backing using Features